--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@babel/preset-env": "^7.5.4",
     "@babel/register": "^7.4.4",
     "babel-loader": "^8.0.6",
+    "core-js": "^3.1.4",
+    "regenerator-runtime": "^0.13.2",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
   }
