--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "@babel/register": "^7.4.4",
     "babel-loader": "^8.0.6",
     "core-js": "^3.1.4",
+    "eslint": "^6.0.1",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
     "regenerator-runtime": "^0.13.2",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
