--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "format": "prettier-standard 'src/**/*.js'",
     "lint": "eslint src",
     "build": "eslint src && webpack",
     "run": "node -r source-map-support/register dist/index.js",
     "buildAndRun": "webpack && node -r source-map-support/register dist/index.js"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm format"
+    }
   },
   "dependencies": {
     "source-map-support": "^0.5.12",
@@ -25,6 +31,8 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
+    "husky": "^3.0.0",
+    "prettier-standard": "^9.1.1",
     "regenerator-runtime": "^0.13.2",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
