--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm format"
+      "pre-commit": "npm run format "
     }
   },
   "dependencies": {
