--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "precommit": "prettier-standard 'src/**/*.js'",
+    "precommit": "prettier-standard --write 'src/**/*.js'",
     "lint": "eslint src",
     "build": "eslint src && webpack",
     "run": "node -r source-map-support/register dist/index.js",
@@ -12,7 +12,7 @@
   "lint-staged": {
     "linters": {
       "src/**/*.js": [
-        "prettier-standard",
+        "prettier-standard --write",
         "git add"
       ]
     }
