--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "pretty": "prettier --write \"src/**/*.js\"",
+    "pretty": "prettier-standard --write \"src/**/*.js\"",
     "precommit": "lint-staged",
     "lint": "eslint src",
     "build": "eslint src && webpack",
@@ -35,7 +35,6 @@
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^3.0.0",
     "lint-staged": "^9.2.0",
-    "prettier": "^1.18.2",
     "prettier-standard": "^9.1.1",
     "regenerator-runtime": "^0.13.2",
     "webpack": "^4.35.3",
