--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     }
   },
   "lint-staged": {
-    "*.js": [
+    "src/**/*.js": [
       "prettier-standard --write src/**/*.js",
       "git add"
     ]
